# ocaml-balltree

./: .dockerignore  Dockerfile  README.md  balltree.ml  baseline_make_balltree_from_file.py  dune-project  example_create_embeddings_from_strings.ml  example_make_balltree_from_file.ml  examples.ml  using_fheap.ml
baas/: baas.ml  create_embeddings.ml  dune
balltree/src/: balltree.ml  dune
balltree/test/: all.ml  alltests.ml  dune  tests.ml
data/: input_sentences.txt
examples/: baseline_make_balltree_from_file.py  dune  example_make_balltree_from_file.ml
